--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
+asgiref==3.8.1
 contourpy==1.2.1
 cycler==0.12.1
+Django==5.0.4
 fonttools==4.51.0
 kiwisolver==1.4.5
 matplotlib==3.8.4
@@ -9,3 +11,4 @@ pillow==10.3.0
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
 six==1.16.0
+sqlparse==0.5.0
