--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.8.1
 contourpy==1.2.1
 cycler==0.12.1
 Django==5.0.4
+djangorestframework==3.15.2
 fonttools==4.51.0
 kiwisolver==1.4.5
 matplotlib==3.8.4
